Added deps to bower, removed from cdns

--- a/app/styles/_header.scss
+++ b/app/styles/_header.scss
@@ -20,6 +20,14 @@
   }
 }
 
+.logotype {
+  position: absolute;
+  height: 120px;
+  width: auto;
+  left: 1rem;
+  z-index: 100;
+}
+
 .diamond {
   position: absolute;
 
