--- a/app/styles/_header.scss
+++ b/app/styles/_header.scss
@@ -1,10 +1,11 @@
 .header {
   position: relative;
+  z-index: 1;
 
   display: flex;
   align-items: center;
   width: 100%;
-  height: 250px;
+  height: 240px;
   h1 {
     /* Not sure if it should just be a h1 tag here... also text size is not responsive */
     z-index: 1;
@@ -23,12 +24,12 @@
 .logotype {
   position: absolute;
   z-index: 100;
-  top: -80px;
-  left: 1rem;
+  top: -40;
+  left: 2rem;
 
   visibility: hidden;
   width: auto;
-  height: 60%;
+  height: 30%;
 
   opacity: 0;
 
@@ -105,3 +106,32 @@
   width: 110%;
   height: 145%;
 }
+
+/* Maybe place an absolute layer above svgs??
+  .diamond svg {
+  z-index: 100;
+  color: #fff;
+  border-radius: 8px;
+  background-repeat: no-repeat;
+  background-image: -webkit-linear-gradient(
+    top left,
+    rgba(255, 255, 255, 0.2) 0%,
+    rgba(255, 255, 255, 0.2) 37%,
+    rgba(255, 255, 255, 0.8) 45%,
+    rgba(255, 255, 255, 0.0) 50%
+  );
+  background-position: -100px -100px, 0 0;
+  background-size: 250% 250%, 100% 100%;
+  transition: background-position 0s ease;
+}
+
+.diamond svg:hover,
+.diamond svg:focus {
+  color: #fff;
+  background-position: 0 0, 0 0;
+  transition-duration: 0.5s;
+}
+
+.diamond svg:active {
+    top:1px;
+} */
