--- a/app/styles/_landingPage.scss
+++ b/app/styles/_landingPage.scss
@@ -1,31 +1,31 @@
 .landingPage__wrapper-intro {
   height: 100vh;
-  margin-top: 100px;  // Extra height of crystals in header.
+  margin-top: 45px; // Extra height of crystals in header.
   padding: 0 $Baseline;
   &--text {
     font-family: 'Poppins Light';
     h1 {
-      margin: 0;
+      margin: $Baseline / 2 0;
 
       color: #a2555f;
 
-      font-size: 5 * $Baseline;
-      line-height: 5 * $Baseline;
+      text-align: center;
+
+      transform: rotate(3deg);
+
+      @include type-setting(5);
     }
   }
 }
 
 .landingPage__wrapper-desc {
-  margin: $Baseline;
-  p {
-    margin-right: 1rem;
+  margin: 0;
 
-    color: #5c89ab;
+  color: #5c89ab;
 
-    font-size: $Baseline * 1.2;
-    line-height: $Baseline;
-    word-break: break;
-  }
+  word-break: break;
+
+  @include type-setting(0);
 }
 
 .landingPage__wrapper-circle {
