--- a/app/styles/_header.scss
+++ b/app/styles/_header.scss
@@ -6,32 +6,20 @@
   align-items: center;
   width: 100%;
   height: 240px;
-  h1 {
-    /* Not sure if it should just be a h1 tag here... also text size is not responsive */
-    z-index: 1;
-
-    width: 100%;
-
-    color: #feffda;
-    text-shadow: 5px 5px 15px #000;
-
-    font-family: 'Carrois Gothic SC', sans-serif;
-    font-size: 10rem;
-    text-align: center;
-  }
 }
 
 .logotype {
   position: absolute;
-  z-index: 100;
-  top: -40;
-  left: 2rem;
+  z-index: 5;
+  top: 30px;
+  left: 10rem;
 
   visibility: hidden;
   width: auto;
   height: 30%;
 
   opacity: 0;
+  box-shadow: inset 5px 5px 10px #282828;
 
   transform: rotate(45deg);
 }
@@ -78,42 +66,49 @@
 
 /* To make the shapes more odd and make them fit better in each other */
 .diamond-1 {
-  svg, .shineDiv {
+  z-index: 10;
+  svg,
+  .shineDiv {
     width: 140%;
     height: 140%;
   }
 }
 
 .diamond-2 {
-  svg, .shineDiv {
+  svg,
+  .shineDiv {
     width: 125%;
     height: 125%;
   }
 }
 
 .diamond-3 {
-  svg, .shineDiv {
+  svg,
+  .shineDiv {
     width: 110%;
     height: 110%;
   }
 }
 
 .diamond-4 {
-  svg, .shineDiv {
+  svg,
+  .shineDiv {
     width: 121%;
     height: 121%;
   }
 }
 
 .diamond-5 {
-  svg, .shineDiv {
+  svg,
+  .shineDiv {
     width: 120%;
     height: 120%;
   }
 }
 
 .diamond-6 {
-  svg, .shineDiv {
+  svg,
+  .shineDiv {
     width: 110%;
     height: 145%;
   }
@@ -123,21 +118,42 @@
   position: absolute;
   top: 0;
   left: 0;
+
   border-radius: 20px;
   background-repeat: no-repeat;
-  background-image: -webkit-linear-gradient(
-  top left,
-  rgba(255, 255, 255, 0.0) 0%,
-  rgba(255, 255, 255, 0.1) 75%,
-  rgba(255, 255, 255, 0.6) 85%,
-  rgba(255, 255, 255, 0.0) 100%
-  );
-  background-position: 250% 250%, 0 0;
   background-size: 250% 250%;
+
   transition: background-position 0s ease;
+  &.normal {
+    background-image: linear-gradient(
+    top left,
+    rgba(255, 255, 255, .0) 0%,
+    rgba(255, 255, 255, .1) 75%,
+    rgba(255, 255, 255, .6) 85%,
+    rgba(255, 255, 255, .0) 100%
+    );
+    background-position: 250% 250%, 0 0;
+  }
+  &.reverse {
+    background-image: linear-gradient(
+    top left,
+    rgba(255, 255, 255, .0) 0%,
+    rgba(255, 255, 255, .6) 15%,
+    rgba(255, 255, 255, .1) 25%,
+    rgba(255, 255, 255, .0) 100%
+    );
+    background-position: -80% -80%, 0 0;
+  }
 }
 
-.shineDiv.shine {
-  background-position: 400px 100px, 0 0;
-  transition-duration: 2s;
+.shineDiv.normal.shine {
+  background-position: -80% -80%, 0 0;
+
+  transition-duration: 2.5s;
+}
+
+.shineDiv.reverse.shine {
+  background-position: 250% 250%, 0 0;
+
+  transition-duration: 2.5s;
 }
