--- a/app/styles/_header.scss
+++ b/app/styles/_header.scss
@@ -11,7 +11,7 @@
 .logotype {
   position: absolute;
   z-index: 5;
-  top: 30px;
+  top: 40px;
   left: 10rem;
 
   visibility: hidden;
@@ -127,20 +127,20 @@
   &.normal {
     background-image: linear-gradient(
     top left,
-    rgba(255, 255, 255, .0) 0%,
-    rgba(255, 255, 255, .1) 75%,
-    rgba(255, 255, 255, .6) 85%,
-    rgba(255, 255, 255, .0) 100%
+    rgba(210, 193, 197, .0) 0%,
+    rgba(220, 204, 208, .1) 75%,
+    rgba(230, 228, 215, .6) 85%,
+    rgba(162, 186, 189, .0) 100%
     );
     background-position: 250% 250%, 0 0;
   }
   &.reverse {
     background-image: linear-gradient(
     top left,
-    rgba(255, 255, 255, .0) 0%,
-    rgba(255, 255, 255, .6) 15%,
-    rgba(255, 255, 255, .1) 25%,
-    rgba(255, 255, 255, .0) 100%
+    rgba(162, 186, 189, .0) 0%,
+    rgba(230, 228, 215, .6) 75%,
+    rgba(220, 204, 208, .1) 85%,
+    rgba(210, 193, 197, .0) 100%
     );
     background-position: -80% -80%, 0 0;
   }
@@ -152,8 +152,8 @@
   transition-duration: 2.5s;
 }
 
-.shineDiv.reverse.shine {
+.shineDiv.reverse.shine { /* Def needs tweaking */
   background-position: 250% 250%, 0 0;
 
-  transition-duration: 2.5s;
+  transition-duration: 2.2s;
 }
