--- a/app/styles/_header.scss
+++ b/app/styles/_header.scss
@@ -126,34 +126,34 @@
   transition: background-position 0s ease;
   &.normal {
     background-image: linear-gradient(
-    top left,
-    rgba(210, 193, 197, .0) 0%,
-    rgba(220, 204, 208, .1) 75%,
-    rgba(230, 228, 215, .6) 85%,
-    rgba(162, 186, 189, .0) 100%
+    to bottom right,
+    rgba(210, 193, 197, .0) 20%,
+    rgba(220, 204, 208, .7) 75%,
+    rgba(230, 228, 215, .1) 85%,
+    rgba(162, 186, 189, .0) 90%
     );
-    background-position: 250% 250%, 0 0;
+    background-position: 200% 200%, 0 0;
   }
   &.reverse {
     background-image: linear-gradient(
-    top left,
-    rgba(162, 186, 189, .0) 0%,
-    rgba(230, 228, 215, .6) 75%,
+    to top left,
+    rgba(162, 186, 189, .0) 20%,
+    rgba(230, 228, 215, .7) 75%,
     rgba(220, 204, 208, .1) 85%,
     rgba(210, 193, 197, .0) 100%
     );
-    background-position: -80% -80%, 0 0;
+    background-position: -70% -50%, 0 0;
   }
 }
 
 .shineDiv.normal.shine {
-  background-position: -80% -80%, 0 0;
+  background-position: -70% -50%, 0 0;
 
-  transition-duration: 2.5s;
+  transition-duration: 2s;
 }
 
 .shineDiv.reverse.shine { /* Def needs tweaking */
-  background-position: 250% 250%, 0 0;
+  background-position: 200% 200%, 0 0;
 
-  transition-duration: 2.2s;
+  transition-duration: 2.3s;
 }
