Dist build tweaks, currently not linting on build

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -40,6 +40,9 @@ $height-scale: (
   line-height: height-scale($level);
 }
 
+//Import normalize
+@import 'normalize.scss';
+
 // Import fonts
 @import 'fonts.scss';
 
