--- a/app/styles/fonts.scss
+++ b/app/styles/fonts.scss
@@ -1,3 +1,19 @@
+/* CRYSTAL SKY */
+@font-face {
+  font-family: 'Crystal Sky';
+  src: url('../fonts/CrystalSky/Crystal-Sky.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Crystal Sky Alt';
+  src: url('../fonts/CrystalSky/Crystal-Sky-Alt.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Crystal Sky Caps';
+  src: url('../fonts/CrystalSky/Crystal-Sky-Caps.ttf') format('truetype');
+}
+
 /* LEAGUE GOTHIC */
 @font-face {
   font-family: 'Gothic Regular';
