--- a/app/styles/animations.scss
+++ b/app/styles/animations.scss
@@ -1,6 +1,6 @@
 @keyframes grow {
   from { font-size: 0px; }
-  to { font-size: 36px; }
+  to { font-size: 2.4rem * (1.333 * 1.333 * 1.333) }
 }
 
 // SCROLLMAGIC ANIMATION CLASSES
