--- a/app/styles/_landingPage.scss
+++ b/app/styles/_landingPage.scss
@@ -1,6 +1,6 @@
 .landingPage__wrapper-intro {
   margin-top: 90px; // Extra height of crystals in header.
-  padding: 0 $Baseline;
+  padding: 0 $Baseline $Baseline $Baseline;
   @media ( max-width: 400px ) {
     padding: 0 $Baseline / 2;
   }
@@ -12,7 +12,6 @@
   display: flex;
   flex-direction: column;
   max-width: 1400px;
-  min-height: 40rem;
   margin: 0 auto;
 
   font-family: 'Crystal Sky';
