--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -74,5 +74,6 @@ body {
   width: 100%;
   height: 100%;
 
-  background: #fcffb4;
+  // background: #fcffb4; Old background
+  background: rgb(252, 255, 187);
 }
