--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -52,6 +52,7 @@ $height-scale: (
 // Import modular stylesheets
 @import '_header.scss';
 @import '_landingPage.scss';
+@import '_menu.scss';
 
 .browserupgrade {
   margin: .2em 0;
