--- a/app/styles/_landingPage.scss
+++ b/app/styles/_landingPage.scss
@@ -1,9 +1,8 @@
 .landingPage__wrapper {
-  margin-top: 90px; // Extra height of crystals in header.
-  padding: 0 $Baseline $Baseline $Baseline;
-  @media ( max-width: 400px ) {
-    padding: 0 $Baseline / 2;
-  }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .landingPage__wrapper-intro-text {
@@ -12,7 +11,6 @@
   display: flex;
   flex-direction: column;
   max-width: 1400px;
-  margin: 0 auto;
 
   font-family: 'Crystal Sky';
   h1 {
@@ -87,9 +85,4 @@
     max-width: 100%;
     margin-top: $Baseline * 1.5;
   }
-}
-
-.particle-delimiter {
-  height: 10rem;
-  margin: $Baseline -3rem;
 }
