--- a/app/styles/_contact.scss
+++ b/app/styles/_contact.scss
@@ -1,10 +1,10 @@
-.about-section {
+.contact-section {
   padding: 3rem 0;
 
   letter-spacing: 5px;
 }
 
-.about-header {
+.contact-header {
   margin: 0;
 
   font-family: 'Crystal Sky Alt';
@@ -13,7 +13,7 @@
   @include type-setting(7);
 }
 
-.about-text {
+.contact-text {
   font-family: 'Crystal Sky Caps';
   font-weight: bold;
   letter-spacing: 1px;
