--- a/app/styles/_contact.scss
+++ b/app/styles/_contact.scss
@@ -1,5 +1,6 @@
 .contact-section {
-  padding: 3rem 0;
+  max-width: 1440px;
+  padding: 3rem 0 0 0;
 
   letter-spacing: 5px;
 }
@@ -14,8 +15,11 @@
 }
 
 .contact-text {
+  margin: 0;
+
   font-family: 'Crystal Sky Caps';
   font-weight: bold;
+  text-align: justify;
   letter-spacing: 1px;
 
   @include type-setting(1);
