--- a/app/styles/_about.scss
+++ b/app/styles/_about.scss
@@ -1,4 +1,6 @@
 .about-section {
+  max-width: 1440px;
+
   padding: 3rem 0;
 
   letter-spacing: 5px;
@@ -14,8 +16,11 @@
 }
 
 .about-text {
+  margin: 0;
+
   font-family: 'Crystal Sky Caps';
   font-weight: bold;
+  text-align: justify;
   letter-spacing: 1px;
 
   @include type-setting(1);
