--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -90,6 +90,9 @@ body {
 }
 
 .page-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   margin-top: $Baseline * 3; // Extra height of crystals in header.
   padding: $Baseline;
   @media ( max-width: 400px ) {
