--- a/app/styles/_menu.scss
+++ b/app/styles/_menu.scss
@@ -3,22 +3,20 @@
   align-items: center;
   justify-content: center;
   width: 100%;
-  height: 260px;
-
   a {
-    text-decoration: none;
     color: #000;
     outline: none;
-  }
 
+    text-decoration: none;
+  }
   .menu-about,
   .menu-portfolio,
   .menu-work,
   .menu-contact {
     position: relative;
 
-    width: 23rem;
-    height: 100%;
+    width: 22rem;
+    height: 250px;
     margin: 0 $Baseline 0 0;
 
     background: white;
@@ -26,6 +24,17 @@
     cursor: pointer;
 
     clip-path: polygon(25% 12%, 59% 21%, 91% 5%, 100% 64%, 71% 100%, 33% 95%, 6% 56%);
+    @media ( max-width: 1000px ) {
+      width: 15rem;
+      height: 180px;
+    }
+    @media ( max-width: 870px ) {
+      flex-basis: 27%;
+    }
+    @media ( max-width: 650px ) {
+      height: 160px;
+      flex-basis: 25%;
+    }
   }
   .menu-portfolio,
   .menu-work,
@@ -63,6 +72,10 @@
     letter-spacing: 2px;
 
     transform: translate(-40%, -40%);
+  }
+
+  @media ( max-width: 1000px ) {
+    flex-wrap: wrap;
   }
 }
 
