--- a/app/styles/_menu.scss
+++ b/app/styles/_menu.scss
@@ -5,12 +5,13 @@
   width: 100%;
   height: 260px;
 
+  user-select: none;
   a {
-    text-decoration: none;
     color: #000;
     outline: none;
-  }
 
+    text-decoration: none;
+  }
   .menu-about,
   .menu-portfolio,
   .menu-work,
