Loads of responsive fixes

--- a/app/styles/_about.scss
+++ b/app/styles/_about.scss
@@ -13,6 +13,14 @@
   text-align: center;
 
   @include type-setting(7);
+
+  @media ( max-width: 900px ) {
+    @include type-setting(6);
+  }
+
+  @media ( max-width: 550px ) {
+    @include type-setting(5);
+  }
 }
 
 .about-text {
@@ -24,4 +32,12 @@
   letter-spacing: 1px;
 
   @include type-setting(1);
+
+  @media ( max-width: 900px ) {
+    @include type-setting(0);
+  }
+
+  @media ( max-width: 550px ) {
+    @include type-setting(-1);
+  }
 }
