--- a/app/styles/_header.scss
+++ b/app/styles/_header.scss
@@ -7,37 +7,30 @@
   width: 100%;
   height: 20vh;
   min-height: 200px;
-
   @media ( min-width: 2300px ) {
     height: 24vh;
     min-height: 265px;
   }
-
   @media ( min-width: 2000px ) and ( max-width: 2300px ) {
     height: 22vh;
     min-height: 240px;
   }
-
   @media ( min-width: 1700px  ) and ( max-width: 2000px ) {
     height: 21vh;
     min-height: 220px;
   }
-
   @media ( max-width: 850px ) and ( min-width: 650px ) {
     height: 17vh;
     min-height: 200px;
   }
-
   @media ( max-width: 650px ) and ( min-width: 500px ) {
     height: 14vh;
     min-height: 160px;
   }
-
   @media ( max-width: 500px ) and ( min-width: 400px ) {
     height: 13vh;
     min-height: 150px;
   }
-
   @media ( max-width: 400px ) {
     height: 11vh;
     min-height: 140px;
@@ -98,7 +91,6 @@
   left: 62%;
 
   clip-path: polygon(100% 0, 30% 0, 30% 45%, 0 80%, 10% 90%, 100% 100%);
-
   @media ( max-width: 500px ) {
     clip-path: polygon(100% 0, 30% 0, 30% 45%, 0 83%, 10% 90%, 100% 100%);
   }
@@ -192,7 +184,8 @@
   transition-duration: 1.8s;
 }
 
-.shineDiv.reverse.shine { /* Def needs tweaking */
+.shineDiv.reverse.shine {
+  /* Def needs tweaking */
   background-position: 200% 200%, 0 0;
 
   transition-duration: 2.1s;
