--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -80,13 +80,17 @@ html {
 }
 
 body {
-  overflow: hidden;
   overflow-y: auto;
   width: 100%;
   height: 100%;
   // background: #fcffb4; Old background
 
   background: rgb(252, 255, 187);
+}
+
+.whole-page-wrapper {
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 .page-container {
